fix overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -30,6 +30,7 @@
 body {
     background-color: $background-color;
     font-family: 'Oswald', sans-serif !important;
+    overflow-x: hidden;
 }
 
 section {
