--- a/src/scss/elements/_side_nav.scss
+++ b/src/scss/elements/_side_nav.scss
@@ -7,7 +7,7 @@
   z-index: 1;
   top: 0;
   right: 0;  
-  overflow-x: hidden;
+  overflow: hidden;
   transition: 0.5s;  
 
   a {
